[package]
name = "overseerd-example-jobs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
overseerd = { path = "../..", features = ["daemon", "jobs", "tracing-subscriber"] }
tokio = { workspace = true }
tracing.workspace = true
